--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "json-parser-lib",
-  "version": "1.0.0",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+    "name": "json-parser-lib",
+    "version": "1.0.0",
+    "main": "app.js",
+    "scripts": {
+        "test": "vitest",
+        "dev": "node ./src/app.js",
+        "format": "npx prettier . --write"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "type": "module",
+    "devDependencies": {
+        "vitest": "^2.1.8"
+    },
+    "dependencies": {
+        "prettier": "^3.4.2"
+    }
 }
